--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
+<h1> Rebecca Howarth</h1>
+<img src="me.jpg" alt = "Rebecca Howarth"/> </br>
 
+<a href="bio.html">Biography</a> </br>
+<a href="resume.html">Resume</a>
 <p> Go away. </p>
 
 </body>
