--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
 
 <head>
 	<title>Rebecca Howarth</title>
+	<meta charset="UTF-8">
 	<link rel="stylesheet" href="syling.css"/>
 </head>
 
@@ -59,7 +60,7 @@
 
 <p>
 <h1>SKILLS</h1>
-	<h3>	Technical:</h3>Programming in C++, C, HTML5, CSS, JavaScript, Python, Adobe Illustrator
+	<h3>	Technical:</h3>Programming in C++, C, HTML5, CSS, JavaScript, Python, Adobe Illustrator, Adobe Premiere Pro 
 	<h3>	Language:</h3>Proficient in French
 </body>
 </p>
