--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <head>
 	<title>Rebecca Howarth</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="syling.css"/>
+	<link rel="stylesheet" href="styling.css"/>
 </head>
 
 <body>
 <h1> Rebecca Howarth</h1>
-<img src="me.jpg" alt = "Rebecca Howarth"/> </br>
+<img src="me.jpg" alt = "Rebecca Howarth"/> <br/>
 
-<a href="bio.html">Biography</a> </br>
+<a href="bio.html">Biography</a> <br/>
 <a href="resume.html">Resume</a>
 <p> Go away. </p>
 
