--- a/resume.html
+++ b/resume.html
@@ -60,8 +60,10 @@
 
 <p>
 <h1>SKILLS</h1>
-	<h3>	Technical:</h3>Programming in C++, C, HTML5, CSS, JavaScript, Python, Adobe Illustrator, Adobe Premiere Pro 
-	<h3>	Language:</h3>Proficient in French
+	<h3>	Technical:</h3>
+	<p> Programming in C++, C, HTML5, CSS, JavaScript, Python, Adobe Illustrator, Adobe Premiere Pro </p>
+	<h3>	Language:</h3>
+	<p> Proficient in French </p>
 </body>
 </p>
 
